changing Where Clause handling to support AND/OR conditions + some useful Predicates in Conditions